# ORICON

./: .gitignore  BYOL.ipynb  README.md  check_data.py  data_check.ipynb  feat_columns.npy  generate_vae.ipynb  main.py  ot_results_summary.xlsx  pyproject.toml  run_beta_sweep.py  定額制動画配信.xlsx
Optimal_transportation/: optimal_transport.ipynb  optimal_transport_2.ipynb
PCA_UMAP/: pca_umap.ipynb
data/results/: best_services_by_segment.csv  emb_new.csv  feat_df_scaled.csv  improved_ot_results.csv  latent_vectors_new_services.csv  latent_vectors_new_services.xlsx  new_services_features.csv  ot_flow_detail.csv  ot_results.csv  pca_cum_ratio.txt  pca_loadings.csv  pca_scores.csv  pca_top3_features.csv  segment_summary.csv  top6_latent_axes.csv  z_feature_correlation.csv
data/shared/: X_scaled.npy  cond_onehot.npy  emb_new.npy  embeddings.npy  feat_df.pkl  user_segments_profiles.json  user_segments_segments.csv
results/: ot_results.npz  ot_summary.xlsx
src/BERT/: bert.py  bert_1.ipynb
src/BYOL/: BYOL.ipynb  byol.py  byol_models.py
src/ByCursor/: complete_analysis_report.md  improved_main.py  investor_business_plan.md  original_concept_explained.md
src/ByCursor_2/: analyze_other_industries.py  analyze_video_streaming.py  detailed_analysis.py
src/ByCursor_3/: requirements_doc.md
src/Optimal_transportation/: config.py  optimal_transport.py  optimal_transport_2.ipynb  ot.py  ot_main.py  ot_single.ipynb  ot_single_2.ipynb  utils.py  visualize.py
src/PCA_UMAP/: visualize.py
utils/: args.py  dataloader.py  extract_features.py  logger.py  utils.py
(+41 files in other folders)
