[project]
name = "jisyu-zemi"
version = "0.1.0"
description = ""
authors = [
    {name = "fuukanoo",email = "n.fukano6211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
